--- a/app/app.css
+++ b/app/app.css
@@ -1,24 +1,51 @@
-#logo {
+/* GLOBALS */
+p {
+	line-height: 1.5;
+}
+
+/* LOGO */
+.logo-container {
+
+}
+
+.logo {
 	display: block;
-	margin-top: 1vh;
+	margin-top: 2vh;
 	margin-left: auto;
 	margin-right: auto;
 	height: 20vh;
 	width: auto;
 }
 
+.container {
+
+}
+
+/* BLOG */
+.blog-entry {
+	margin: 1em 0;
+}
+
+.blog-image {
+	max-width: 100%;
+	margin: 0.5em 0;
+}
+
+.blog-body {
+	margin: 1em 0.5em;
+}
+
 /* NAVIGATION BAR */
 .navbar {
-	height: 30px;
+	height: 0.25em;
 	text-align: center;
 	list-style: none;
 	cursor: default;
 }
 
 .navbar li {
-	font-size: 18px;
 	display: inline;
-	margin: 0px 15px;
+	margin: 0 1.5em;
 	position: static;
 	-webkit-user-select: none;    
 	-moz-user-select: none; 
@@ -27,5 +54,10 @@
 
 .navbar a {
 	display: inline-block;
-	padding: 8px;
+	text-decoration: none;
+	padding: 0.5em 0;
+}
+
+.navbar a, .navbar a:hover, .navbar a:visited {
+	color: inherit;
 }
