more migration, work on blog styling

--- a/app/css/_styleguide.scss
+++ b/app/css/_styleguide.scss
@@ -5,7 +5,7 @@
 $font-body    : 'Old Standard TT', sans-serif;
 $font-accent  : 'Libre Baskerville', sans-serif;
 $font-heading : 'Montserrat', sans-serif;
-$offwhite     : #fEfefd;
+$offwhite     : #fefefd;
 $offblack     : #333;
 $lightgrey    : #ddd;
 $grey         : #888;
