--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -2,69 +2,110 @@
 
 /* GLOBALS */
 body {
-	background-color: #fafafa;
-	font-family: $font-body;
+	background-color: rgba(239, 226, 255, 0.28);
 }
 
 p {
-	line-height: 1.5;
+	line-height: $base-unit * 1.5;
 }
 
-/* LOGO */
-.logo-container {
-	.logo {
-		display: block;
-		margin-top: 2vh;
-		margin-left: auto;
-		margin-right: auto;
-		height: 20vh;
-		width: auto;
+/* HEADER, includes logo and navbar */
+.header-container {
+	background-color: #fff;
+	.logo-container {
+		padding-top: 1em;
+		.logo {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			height: 20vh;
+			width: auto;
+		}
 	}
-}
 
+	.navbar-container {
+		padding-top: 0.25em;
+		text-align: center;
+		list-style: none;
+		cursor: default;
+		border-bottom: 2px solid #6F4D8F;
+		ul {
+			margin: 0;
+			li {
+				padding: 1em 1em;
+				color: #361356;
+				display: inline-block;
+				-webkit-user-select: none;    
+				-moz-user-select: none; 
+				-ms-user-select: none; 
 
+				/* animation shit */
+				vertical-align: middle;
+				-webkit-transform: perspective(1px) translateZ(0);
+				transform: perspective(1px) translateZ(0);
+				box-shadow: 0 0 1px transparent;
+				position: relative;
+				overflow: hidden;
+			}
 
-/* BLOG */
-.blog-container {
-	margin: 1em 0;
-	.blog-post-container {
-		.blog-body {	
-			overflow: hidden;
-			box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
-			padding: 1em;
-			margin-top: 1.5em;
-			margin-right: 1.5em;
-			.blog-image {
-				max-width: 100%;
-				margin: 0.5em 0;
+			li:before {
+				content: "";
+				position: absolute;
+				z-index: -1;
+				left: 50%;
+				right: 50%;
+				bottom: 0;
+				background: #9277AC;
+				height: 0.125em;
+				-webkit-transition-property: left, right;
+				transition-property: left, right;
+				-webkit-transition-duration: 0.3s;
+				transition-duration: 0.3s;
+				-webkit-transition-timing-function: ease-out;
+				transition-timing-function: ease-out;
+			}
+			
+			li:hover:before, li:focus:before, li:active:before {
+				left: 0;
+				right: 0;
+			}
+
+			a {
+				display: inline-block;
+				text-decoration: none;
+			}
+
+			a, a:hover, a:visited {
+				color: inherit;
 			}
 		}
 	}
 }
 
-/* NAVIGATION BAR */
-.navbar {
-	height: 0.25em;
-	text-align: center;
-	list-style: none;
-	cursor: default;
-}
-
-.navbar li {
-	display: inline;
-	margin: 0 1.5em;
-	position: static;
-	-webkit-user-select: none;    
-	-moz-user-select: none; 
-	-ms-user-select: none; 
-}
-
-.navbar a {
-	display: inline-block;
-	text-decoration: none;
-	padding: 0.5em 0;
-}
-
-.navbar a, .navbar a:hover, .navbar a:visited {
-	color: inherit;
+/* BLOG (blog.html) */
+.blog-container {
+	.blog-post-container {
+		margin: 1.25em 0;
+		background-color: $offwhite;
+		box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
+		padding: 1.25em;
+		.blog-header {
+			margin: 0;
+		}
+		.blog-date {
+			color: $grey;
+		}
+		.blog-body {
+			margin-top: 1em;
+			overflow: hidden;
+			.blog-image {
+				box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
+				max-width: 100%;
+				margin: 0.5em 0;
+			}
+			p {
+				margin-top: 1em;
+			}
+		}
+	}
 }
