change fonts, spacing

--- a/app/css/_styleguide.scss
+++ b/app/css/_styleguide.scss
@@ -1,9 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
-@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400italic);
-@import url(https://fonts.googleapis.com/css?family=Old+Standard+TT);
+@import url(https://fonts.googleapis.com/css?family=Crimson+Text);
 
-$font-body    : 'Old Standard TT', sans-serif;
-$font-accent  : 'Libre Baskerville', sans-serif;
+$font-body    : 'Crimson Text', sans-serif;
 $font-heading : 'Montserrat', sans-serif;
 $offwhite     : #fefefd;
 $offblack     : #333;
