--- a/app/css/app.scss
+++ b/app/css/app.scss
@@ -5,8 +5,14 @@ body {
 	background-color: rgba(239, 226, 255, 0.28);
 }
 
-p {
+h1, h2, h3, h4, li {
+	font-family: $font-heading;
+}
+
+span, p {
 	line-height: $base-unit * 1.5;
+	font-family: $font-body;
+	font-size: 18px;
 }
 
 /* HEADER, includes logo and navbar */
@@ -88,24 +94,21 @@ p {
 		margin: 1.25em 0;
 		background-color: $offwhite;
 		box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
-		padding: 1.25em;
+		padding: 2em;
+		.blog-image {
+			box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
+			max-width: 100%;
+			max-height: 80vh;
+		}
 		.blog-header {
-			margin: 0;
+			margin-top: $base-unit * 0.5;
 		}
 		.blog-date {
 			color: $grey;
 		}
 		.blog-body {
-			margin-top: 1em;
+			margin-top: $base-unit * 1.5;
 			overflow: hidden;
-			.blog-image {
-				box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.1);
-				max-width: 100%;
-				margin: 0.5em 0;
-			}
-			p {
-				margin-top: 1em;
-			}
 		}
 	}
 }
